# tinyflow

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
app/: __init__.py
app/config/: helpers.py
app/core/: __init__.py  agent.py  logger.py  message.py  protocol.py  tools.py
app/embeddings/: factory.py  local_embedding.py  openai_embedding.py
app/memory/: __init__.py  base.py  simple.py  vector.py
app/providers/: anthropic_llm.py  gemini_llm.py  openai_llm.py
app/providers/base/: factory.py  llm.py
app/tools/builtin/: __init__.py  code_execution.py  search.py  web_reader.py
app/vector/: __init__.py  base.py  chroma_db.py  factory.py  qdrant_db.py
app/workflow/: __init__.py  executor.py  state.py
examples/: basic_chat.py  config_value.py
tinyflow/: __init__.py
tinyflow/config/: helpers.py  settings.py
tinyflow/core/: __init__.py  agent.py  exceptions.py  message.py  protocol.py  tools.py  types.py
tinyflow/embeddings/: __init__.py  base.py  factory.py  local_embedding.py  openai_embedding.py
tinyflow/memory/: vector.py
tinyflow/providers/: anthropic_llm.py  gemini_llm.py  openai_llm.py
tinyflow/providers/base/: factory.py  llm.py
tinyflow/tools/builtin/: __init__.py  code_execution.py  search.py  web_reader.py
tinyflow/vector/: chroma_db.py  factory.py  qdrant_db.py
tinyflow/workflow/: executor.py  hooks.py  step.py
