[project]
name = "tinyflow-llm"
version = "0.1.0"
description = "A lightweight, extensible, and provider-agnostic Python framework for building LLM agents."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "anthropic>=0.78.0",
    "google-genai>=1.62.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "openai>=2.16.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "tavily>=1.1.0",
    "tenacity>=9.1.3",
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=2.2.0,<3.0",
    "torch==2.2.2",
    "onnxruntime<1.24.1",
]
vector = [
    "chromadb>=1.4.1",
    "qdrant-client>=1.16.2",
]
dev = [
    "basedpyright>=1.37.4",
    "black>=26.1.0",
    "pyright>=1.1.408",
    "ruff>=0.15.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/kindredzhang/tinyflow"
Repository = "https://github.com/kindredzhang/tinyflow"
Issues = "https://github.com/kindredzhang/tinyflow/issues"

[tool.ruff]
line-length = 98

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N"]
ignore = []

[tool.pyright]
include = ["tinyflow"]
exclude = ["**/node_modules", "**/__pycache__", ".venv"]
typeCheckingMode = "basic"
pythonVersion = "3.12"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.hatch.build.targets.wheel]
packages = ["tinyflow"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
